# inspequte

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MILESTONES.md  README.md  build.rs  mkdocs.yml  release-please-config.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  release-please.yml  rule-authoring-codex.yml  rule-authoring-opus.yml
docs/: github-actions.md  gradle-plugin.md
gradle-plugin/: CHANGELOG.md  build.gradle.kts
plans/: 01-type-use-nullness-annotations.md  02-java-stdlib-nullness-database.md  03-file-based-classpath-input.md  04-improve-agent-documentation.md  04.improve-agent-documentation.done.md  05-worklist-analysis-engine.done.md  05-worklist-analysis-engine.md  06-interrupted-exception-handling-rule.md  06-shared-stack-machine-abstraction.md  07-table-driven-opcode-semantics.done.md  07-table-driven-opcode-semantics.md  08-abstract-domain-traits.md  09-analysis-safety-budgeting.md  10-oss-fp-hunting-skill.done.md  15-LOG4J2_ILLEGAL_PASSED_CLASS.done.md  15-LOG4J2_ILLEGAL_PASSED_CLASS.md  16-LOG4J2_LOGGER_SHOULD_BE_FINAL.md  17-LOG4J2_LOGGER_SHOULD_BE_PRIVATE.done.md  18-LOG4J2_MANUALLY_PROVIDED_MESSAGE.md  19-LOG4J2_SIGN_ONLY_FORMAT.md  20-LOG4J2_UNKNOWN_ARRAY.md  21-type-use-nullness-flow-analysis.md  README.md  SLF4J_ILLEGAL_PASSED_CLASS.md
prompts/: authoring-impl.md  authoring-no-go-resume.md  authoring-rule.md  ideate-rule.md
prompts/references/: no-go-history.md
scripts/: bench-classpath.sh  bench-nullness-compare.sh  bench-spotbugs.sh  capture-jaeger-trace-screenshot.mjs  coverage.sh  generate-rule-docs.sh  prepare-verify-input.sh  smoke-spotbugs.sh
src/: callgraph.rs  classpath.rs  descriptor.rs  engine.rs  ir.rs  main.rs  opcodes.rs  scan.rs  telemetry.rs  test_harness.rs
src/dataflow/: mod.rs  opcode_semantics.rs  stack_machine.rs  worklist.rs
src/rules/: AGENTS.md  array_equals.rs  dead_code.rs  empty_catch.rs  ineffective_equals.rs  insecure_api.rs  interrupted_exception.rs  log4j2_illegal_passed_class.rs  (+15 more)
tests/: exit_codes.rs
(+132 files in other folders)
