[package]
name = "inspequte"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jdescriptor = "0.2.0"
jclassfile = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde-sarif = "0.8.0"
serde_json = "1"
zip = "7.0.0"

[dev-dependencies]
ureq = "=3.1.4"
tempfile = "=3.23.0"

[[bin]]
name = "inspequte"
path = "src/main.rs"
