[package]
name = "inspequte"
version = "0.15.0"
edition = "2024"
description = "Fast, CLI-first static analysis for JVM class and JAR files."
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/KengoTODA/inspequte"
homepage = "https://github.com/KengoTODA/inspequte"
keywords = ["sarif", "jvm", "static-analysis", "bytecode-analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jdescriptor = "0.2.0"
jclassfile = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde-sarif = "0.8.0"
serde_json = "1"
zip = "7.1.0"
jsonschema = "0.17.1"
futures-util = "0.3"
opentelemetry = "0.26"
opentelemetry-otlp = { version = "0.26", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
rayon = "1"
inventory = "0.3"

[dev-dependencies]
ureq = "=3.1.4"
tempfile = "=3.23.0"

[[bin]]
name = "inspequte"
path = "src/main.rs"
